force-app/main/default/objects/cgcloud__RBF_Product_Manual_Input__c/cgcloud__RBF_Product_Manual_Input__c.object-meta.xml
<CustomObject>
    <description>This Object represents the junction between Rate-based Funding and Product</description>
    <label>RBF Product</label>
    <nameField>
        <displayFormat>RBFP-{0000}</displayFormat>
        <label>RBF Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RBF Product Manual Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>