force-app/main/default/objects/cgcloud__RBF_Product_Manual_Input__c/fields/cgcloud__Edit_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Edit_Time__c</fullName>
    <description>Edit Time is used to sequence a users manual edits to grid data</description>
    <label>Edit Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>