force-app/main/default/objects/cgcloud__RBF_Product_Manual_Input__c/fields/cgcloud__External_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__External_Id__c</fullName>
    <description>Federated Id - concatenating Rate-based_Funding__c and Product2</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>