force-app/main/default/objects/cgcloud__RBF_Product_Manual_Input__c/fields/cgcloud__Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Measure_Code__c</fullName>
    <label>Measure Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>