force-app/main/default/objects/cgcloud__RBF_Product_Manual_Input__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>RBF Product Manual Inputs</relationshipLabel>
    <relationshipName>RBF_Product_Manual_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>