force-app/main/default/objects/cgcloud__RBF_Product_Manual_Input__c/fields/cgcloud__Rate_based_Funding__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rate_based_Funding__c</fullName>
    <label>Rate-based Funding</label>
    <referenceTo>cgcloud__Rate_Based_Funding__c</referenceTo>
    <relationshipLabel>Product Rate Overrides</relationshipLabel>
    <relationshipName>RBF_Product_Manual_Inputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>