force-app/main/default/objects/cgcloud__RBF_Product_Manual_Input__c/fields/cgcloud__Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>